--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <provider
+            android:authorities="com.flaao0.shoppinglist"
+            android:name=".data.ShopListProvider"
+            android:exported="true"
+            />
     </application>
 
 </manifest>
